--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 
 MONGO_URI=mongodb+srv://vincent:vinny@cluster0.5ypf5wl.mongodb.net/Invent-App?retryWrites=true&w=majority
 NODE_ENV=development
+JWT_SECRET='asupersupersecret'
