Create email transporter

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@
 MONGO_URI=mongodb+srv://vincent:vinny@cluster0.5ypf5wl.mongodb.net/Invent-App?retryWrites=true&w=majority
 NODE_ENV=development
 JWT_SECRET='asupersupersecret'
+
+EMAIL_HOST=smtp-mail.outlook.com
+EMAIL_USER=MarindanyTracy@outlook.com
+EMAIL_PASS='Tracy@2288!'
