Forgot password controller function - Part 2

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ JWT_SECRET='asupersupersecret'
 EMAIL_HOST=smtp-mail.outlook.com
 EMAIL_USER=MarindanyTracy@outlook.com
 EMAIL_PASS='Tracy@2288!'
+
+FRONTEND_URL=http://localhost:3000
