Save product to cloudinary

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,6 @@ EMAIL_USER=MarindanyTracy@outlook.com
 EMAIL_PASS='Tracy@2288!'
 
 FRONTEND_URL=http://localhost:3000
+
+CLOUDINARY_URL=cloudinary://933139511324944:maO7dZUwl-LaCY7Urae3Tfa93QY@dc6noyyig
+
